<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guanyan</string>

    <string name="tip_double_click_exit">double click to leave</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="go_setting">Go Setting</string>
    <string name="tutorial">Tutorial</string>
    <string name="setting">Setting</string>
    <string name="confirm">Confirm</string>
    <string name="segment">Segment</string>
    <string name="trans_all">Translate all</string>

    <string name="about_app">About App</string>
    <string name="more_setting">More Settings</string>
    <string name="feedback">FeedBack</string>
    <string name="contact_us">Contact Us</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="play_video">Play Video</string>

    <string name="view_on_github">View on Github</string>
    <string name="email">Email</string>

    <string name="common_words">Other Functions</string>
    <string name="audio_trans">Audio Translate</string>
    <string name="word_trans">Word Translate</string>
    <string name="float_trans">Float Translate</string>
    <string name="segment_trans">Segment Translate</string>
    <string name="classical_trans">Classical words Translate</string>
    <string name="sign_to_word_trans">SignToWord Translate</string>
    <string name="floating">Stop Floating</string>


    <string name="too_short_video">Video Too Short</string>

    <string name="floating_permission">Draw Overlay Other APPs</string>
    <string name="description_floating_ask">As we need to translate above other scenes, we need floating above other
        apps permission, click Go Setting to setting and Cancel to cancel
    </string>
    <string name="description_phone_state_ask">As we would need phone state to keep translating only in China, we need
        read phone state permission, click Go Setting to setting and Cancel to cancel
    </string>
    <string name="description_record_ask">As we need record voice to translate, we need recording permission, click Go
        Setting to setting and Cancel to cancel
    </string>
    <string name="edit_quz">Please Describe the question</string>
    <string name="edit_advise">Please enter your advise</string>
    <string name="edit_name">What should we call you?</string>
    <string name="edit_phone">Provide your TEL so we can contact you</string>
    <string name="introduce">A simple but efficient sign language translation tool</string>

    <string name="begin_audio">Begin</string>
    <string name="end_audio">End</string>

    <string name="is_flash">Flash Anim?</string>
    <string name="fps">Frame per Second</string>


    <!-- ORC  -->
    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY" translatable="false">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY" translatable="false">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY" translatable="false">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY" translatable="false">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY" translatable="false">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY" translatable="false">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY" translatable="false">CPU_POWER_MODE_KEY</string>
    <string name="DET_LONG_SIZE_KEY" translatable="false">DET_LONG_SIZE_KEY</string>
    <string name="SCORE_THRESHOLD_KEY" translatable="false">SCORE_THRESHOLD_KEY</string>
    <string name="MODEL_PATH_DEFAULT" translatable="false">models/ch_PP-OCRv2</string>
    <string name="LABEL_PATH_DEFAULT" translatable="false">labels/ppocr_keys_v1.txt</string>
    <string name="IMAGE_PATH_DEFAULT" translatable="false">images/det_0.jpg</string>
    <string name="CPU_THREAD_NUM_DEFAULT" translatable="false">4</string>
    <string name="CPU_POWER_MODE_DEFAULT" translatable="false">LITE_POWER_HIGH</string>
    <string name="DET_LONG_SIZE_DEFAULT" translatable="false">960</string>
    <string name="SCORE_THRESHOLD_DEFAULT" translatable="false">0.1</string>

    <!-- NCNN -->
    <string-array name="size_array">
        <item>Lite</item>
        <item>Full</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
</resources>