<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding_sml">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="@dimen/button_size_mid"
        android:layout_height="@dimen/button_size_mid"
        android:id="@+id/back"
        app:fabCustomSize="@dimen/button_size_mid"
        android:layout_marginLeft="@dimen/app_padding_mid"
        android:layout_marginTop="@dimen/app_padding_mid"
        android:src="@drawable/smaller"
        app:backgroundTint="@color/white"
        android:backgroundTint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:layout_marginBottom="@dimen/app_padding_mid"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textAppearance="@style/TitleTextAppearance" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size_big"
            android:id="@+id/view_on_github"
            android:clickable="true"
            android:padding="@dimen/app_padding_mid"
            android:gravity="center|left"
            android:text="@string/view_on_github"
            android:textAppearance="@style/NormalTextAppearance"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size_big"
            android:id="@+id/email"
            android:clickable="true"
            android:padding="@dimen/app_padding_mid"
            android:gravity="center|left"
            android:text="@string/email"
            android:textAppearance="@style/NormalTextAppearance"/>
    </LinearLayout>
</FrameLayout>